# dashbook-catalog

./: Cargo.toml
src/: error.rs  lib.rs  postgrest.rs
src/catalog/: aws.rs  mod.rs
